fix(devops): rename docker env variables

--- a/.github/workflows/push-prod-environment.yaml
+++ b/.github/workflows/push-prod-environment.yaml
@@ -26,9 +26,9 @@ jobs:
         run: |
           make build-docker-images && make push-docker-images
         env:
-          DOCKER_REGISTRY: ${{ secrets.DOCKER_HUB_USER }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          DOCKER_HUB_REGISTRY: ${{ secrets.DOCKER_HUB_REGISTRY }}
+          DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           IMAGE_NAME_NUXT: ultradex-nuxt
           IMAGE_NAME_PROXY: ultradex-proxy
           PROXY_HOST: nuxt.ultradex
