--- a/.github/workflows/push-prod-environment.yaml
+++ b/.github/workflows/push-prod-environment.yaml
@@ -36,7 +36,7 @@ jobs:
         id: build_kubernetes_files
         run: |
           make \
-            build-kubernetes namespace
+            build-kubernetes-namespace
         env:
           INGRESS_HOST: ${{ secrets.INGRESS_HOST }}
           PROTOCOL: https
