--- a/kubernetes/proxy-deployment.yaml
+++ b/kubernetes/proxy-deployment.yaml
@@ -17,7 +17,7 @@ spec:
       imagePullSecrets:
         - name: regcred
       containers:
-        - image: ${DOCKER_HUB_USER}/${IMAGE_NAME_PROXY}:${VERSION}
+        - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_PROXY}:${VERSION}
           imagePullPolicy: 'Always'
           name: proxy
           ports:
