--- a/.github/workflows/push-prod-environment.yaml
+++ b/.github/workflows/push-prod-environment.yaml
@@ -28,6 +28,7 @@ jobs:
         env:
           DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
           PROXY_HOST: nuxt.ultradex
+          NETWORK: eos
 
       - name: Push Docker images
         run: |
