--- a/Dockerfile.Nuxt
+++ b/Dockerfile.Nuxt
@@ -13,6 +13,12 @@ COPY . /app/
 RUN yarn install --network-concurrency 1
 RUN yarn global add pm2
 
+ARG network
+ARG protocol
+
+ENV NETWORK=$network
+ENV PROTOCOL=$protocol
+
 # build necessary, even if no static files are needed,
 # since it builds the server as well
 RUN yarn build
